# web_scrapper_extension

./: LICENSE  README.md  pyproject.toml  scrape.py
